# buddy-mlir

examples/BuddyClip/: CMakeLists.txt  import-clip.py
examples/BuddyClip/LogMel/: Makefile  import-window.py  log-mel.mlir
examples/BuddyWhisper/: 480000.txt  Makefile  absPower.mlir  arith.mlir  complex.txt  debugWhisperFeatureExtraction.mlir  hanningWindow.mlir  hannpython.txt  import-window.py  initMelFilter.mlir  linspace.mlir  log-mel.mlir  pad.mlir  padReflect.mlir  padToMaxLen.mlir  padded_inputs.txt  printfx.py  rawSpeech.txt  realResult.txt  rfft400.mlir  runWhisper.py  tensor.mlir  whisperFeatureExtraction.mlir
examples/BuddyWhisper/develop/: CMakeLists.txt  testWhisper.cpp  whisperFeatureExtraction.mlir  whisperPreprocessor.cpp
examples/BuddyWhisper/validation/: CMakeLists.txt  Makefile  copyRadf5.mlir  dft1d.mlir  dynamicPad.cpp  dynamicPad.mlir  h2m.py  hertz2mel.mlir  if-call.mlir  indexToF64.mlir  makefile  mel2hertz.mlir  melData.txt  pad_constant.mlir  radf4.mlir  radf5.cpp  radf5.mlir  rfft400.mlir  rfft400Debug.mlir  truncate.mlir  whisperFeatureExtraction.mlir
frontend/Interfaces/buddy/Core/: Container.h
frontend/Interfaces/buddy/DAP/DSP/: FIR.h
frontend/Interfaces/lib/: CMakeLists.txt  DAP.mlir
midend/include/Dialect/DAP/: DAPOps.td
midend/lib/Conversion/DAPVectorization/: DAPVectorization.cpp
midend/lib/Conversion/LowerDAP/: LowerDAPPass.cpp
